--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "keywords": [
     "bot",
-    "skype-bot"
+    "skype-bot",
+    "spotify"
   ],
   "author": "lodev09@gmail.com",
   "license": "MIT",
