--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "botbuilder": "^3.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "node-emoji": "^1.5.1",
     "restify": "^4.3.0",
     "socket.io": "^1.7.3",
     "uuid": "^3.0.1"
