--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "devDependencies": {
     "nodemon": "^1.11.0",
     "webpack": "^2.6.1"
+  },
+  "engines": {
+    "node": "7.9.0",
+    "npm": "4.2.0"
   }
 }
